added past bookings list

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,4 +1,5 @@
 {
+	"appId": "matteolecca-desk-reservation-platform",
   "name": "desk-reservation-platform",
   "integrations": {
     "capacitor": {}
