--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,9 +1,6 @@
 {
-	"appId": "io.ionic.starter",
+	"appId": "matteolecca-reservation-platform",
 	"appName": "desk-reservation-platform",
 	"webDir": "www",
-	"bundledWebRuntime": false,
-	"server": {
-		"url": "http://192.168.1.180:8100"
-	}
+	"bundledWebRuntime": false
 }
