--- a/ionic.config.json
+++ b/ionic.config.json
@@ -4,5 +4,11 @@
   "integrations": {
     "capacitor": {}
   },
-  "type": "angular"
+  "type": "angular",
+  "proxies": [
+    {
+      "path": "*/api",
+      "proxyUrl": "http://localhost:8080"
+    }
+  ]
 }
