--- a/package.json
+++ b/package.json
@@ -20,14 +20,20 @@
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
     "@awesome-cordova-plugins/taptic-engine": "^5.41.0",
+    "@capacitor/android": "3.5.0",
     "@capacitor/app": "1.1.1",
-    "@capacitor/core": "3.4.3",
+    "@capacitor/core": "^3.5.0",
     "@capacitor/haptics": "1.1.4",
-    "@capacitor/ios": "3.4.3",
+    "@capacitor/ios": "3.5.0",
     "@capacitor/keyboard": "1.2.2",
+    "@capacitor/local-notifications": "^1.1.0",
+    "@capacitor/push-notifications": "^1.0.9",
+    "@capacitor/splash-screen": "^1.2.2",
     "@capacitor/status-bar": "1.0.8",
+    "@ionic-native/fingerprint-aio": "^5.36.0",
     "@ionic/angular": "^6.0.0",
     "@ionic/storage-angular": "^3.0.6",
+    "cordova-plugin-fingerprint-aio": "^5.0.1",
     "cordova-plugin-taptic-engine": "^2.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -43,7 +49,7 @@
     "@angular/compiler": "~13.2.2",
     "@angular/compiler-cli": "~13.2.2",
     "@angular/language-service": "~13.2.2",
-    "@capacitor/cli": "3.4.3",
+    "@capacitor/cli": "^3.5.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
